--- a/ghibli-app/styles/Home.module.css
+++ b/ghibli-app/styles/Home.module.css
@@ -51,7 +51,7 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 8rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -106,6 +106,19 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-shadow: 0 0 10px black;
 }
 
 @media (max-width: 600px) {
