--- a/ghibli-app/styles/Home.module.css
+++ b/ghibli-app/styles/Home.module.css
@@ -111,7 +111,7 @@
 .content {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 85%;
   top: 0;
   display: flex;
   flex-direction: column;
@@ -119,6 +119,7 @@
   align-items: center;
   color: white;
   text-shadow: 0 0 10px black;
+  overflow: hidden;
 }
 
 @media (max-width: 600px) {
